--- a/index.html
+++ b/index.html
@@ -25,35 +25,35 @@
 
         <ul>
             <li>
-                <a href="#">testando 1</a>
+                <a href="#">Inscreva-se no NLW</a>
             </li>
 
             <li>
-                <a href="#">Testando 2</a>
+                <a href="#">Baixar meu e-book</a>
             </li>
 
             <li>
-                <a href="#">Testando 3</a>
+                <a href="#">Ver meu portfólio</a>
             </li>
 
             <li>
-                <a href="#" target="_blank">Testando 4</a>
+                <a href="#">Conheça o Explorer</a>
             </li>
         </ul>
         <div id="social-links">
-            <a href="#" target="_blank">
+            <a href="https://github.com/IsakGabrielCG" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
 
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
 
-            <a href="#" target="_blank">
+            <a href="https://www.youtube.com" target="_blank">
                 <ion-icon name="logo-youtube"></ion-icon>
             </a>
 
-            <a href="#" target="_blank">
+            <a href="https://br.linkedin.com" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
