--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </li>
 
             <li>
-                <a href="#">Conheça o Explorer</a>
+                <a href="https://www.microsoft.com/pt-br/download/internet-explorer.aspx">Conheça o Explorer</a>
             </li>
         </ul>
         <div id="social-links">
